# ragNotion

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.offline  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml
.cursor/: rules.mdc  system.mdc
api/: __init__.py  main.py  rag_chain.py
deploy/: README.md
docs/prd/: archi.mmd  infra.md  observability_quality.md  tech_components.md  user_stories.md
eval/: __init__.py  compare_results.py  dataset.json  run_eval.py
offline/: __init__.py  checkpoint.py  list_notion_pages.py  notion_loader.py  pipeline.py  prefect_flow.py  run_ingest.py
shared/: __init__.py  config.py  prompts.py  schemas.py
tests/: test_shared.py
